--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -3,6 +3,7 @@
 }
 
 <div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+    <h1 class="display-4">Seja bem vindo ao Padronizei!</h1>
+    <h3>Esta é uma plataforma desenvolvida para auxiliar no compartilhamento de conhecimento em sua organização.</h3>
+    <p>Estamos em desenvolvimento.</p>
 </div>
