Primeira Edição na View Sobre

--- a/Views/Home/Sobre.cshtml
+++ b/Views/Home/Sobre.cshtml
@@ -1,6 +1,32 @@
 ﻿@{
     ViewData["Title"] = "Privacy Policy";
 }
-<h1>@ViewData["Title"]</h1>
 
-<p>Use this page to detail your site's privacy policy.</p>
+<body>
+    <div class="container-fluid">
+        <h3>DESENVOLVENDO SOLUÇÕES PARA QUE TODOS CONSIGUAM CONTRIBUIR EM DIREÇÃO DE FUTURO MELHOR</h3>
+        <div class="justify-content-center text-justify">
+            <p>
+                <h5>Como assim?</h5>
+                O conhecimento para muitos é o bem mais importante que um ser humano pode adquirir. Nosso objetivo é fazer com que estes "bens" cheguem a todos.
+                Somos uma Startup formado por três jovens acadêmicos, dois cursando engenharia da computação e uma cursando engenharia de produção. Estamos localizados
+                na cidade de Curitiba-PR. Nossa equipe entre muitas qualidades, se destaca por ser formada por jovens que possuem vivência em vários âmbitos corporativos.
+            </p>
+            <p>
+                Com o aumento e a complexidade dos processos administrativos, é necessário que os gestores busquem alternativas e meios para poder superar as dificuldades
+                e desafios encontrados. Tendo em vista tomar melhores decisões em meio às inúmeras possibilidades de resultados.
+            </p>
+            <p>
+                A evolução das tecnologias da informação vem promovendo diversas mudanças na sociedade em geral. Entre elas está a disponibilização de uma quantidade
+                cada vez mais crescente de informações, resultado principalmente do aumento da capacidade de processamento e armazenamento.
+            </p>
+            <p>
+                <h5>Nossa Missão</h5>
+
+                Oferecer um sistema web para armazenar e gerenciar conteúdos de cunho profissional gerados pelos próprios colaboradores da organização. Também pretendemos fazer
+                com que está ferramente ajude no engajamento dos colaboradores, e assim aumentando a motivação dos colaboradores no ambiente de trabalho.
+
+            </p>
+        </div>
+    </div>
+</body>
