--- a/Views/Colaborador/Create.cshtml
+++ b/Views/Colaborador/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
 <h4>Colaborador</h4>
 <hr />
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="DepartamentoId" class="control-label"></label>
-                <input asp-for="DepartamentoId" class="form-control" />
+                <select asp-for="DepartamentoId" class="form-control" asp-items="@(new SelectList(ViewBag.ListaDepartamentos, "Id", "Nome"))"></select>
                 <span asp-validation-for="DepartamentoId" class="text-danger"></span>
             </div>
             <div class="form-group">
