Segundo envio da implementação View Sobre.

--- a/Views/Home/Sobre.cshtml
+++ b/Views/Home/Sobre.cshtml
@@ -2,43 +2,64 @@
     ViewData["Title"] = "Privacy Policy";
 }
 
-<body>
-    <div class="container-fluid">
-        <h3>DESENVOLVENDO SOLUÇÕES PARA QUE TODOS CONSIGUAM CONTRIBUIR EM DIREÇÃO DE FUTURO MELHOR</h3>
-        <div class="justify-content-center text-justify">
-            <p>
-                <h5>Como assim?</h5>
-                O conhecimento para muitos é o bem mais importante que um ser humano pode adquirir. Nosso objetivo é fazer com que estes "bens" cheguem a todos.
-                Somos uma Startup formado por três jovens acadêmicos, dois cursando engenharia da computação e uma cursando engenharia de produção. Estamos localizados
-                na cidade de Curitiba-PR. Nossa equipe entre muitas qualidades, se destaca por ser formada por jovens que possuem vivência em vários âmbitos corporativos.
-            </p>
-            <p>
-                Com o aumento e a complexidade dos processos administrativos, é necessário que os gestores busquem alternativas e meios para poder superar as dificuldades
-                e desafios encontrados. Tendo em vista tomar melhores decisões em meio às inúmeras possibilidades de resultados.
-            </p>
-            <p>
-                A evolução das tecnologias da informação vem promovendo diversas mudanças na sociedade em geral. Entre elas está a disponibilização de uma quantidade
-                cada vez mais crescente de informações, resultado principalmente do aumento da capacidade de processamento e armazenamento.
-            </p>
-            <p>
-                <h5>Nossa Missão</h5>
+    <body>
+        <div class="container-fluid">
+            <h3>DESENVOLVENDO SOLUÇÕES PARA QUE TODOS CONSIGUAM CONTRIBUIR EM DIREÇÃO DE FUTURO MELHOR</h3>
+            <div class="justify-content-center text-justify">
+                <p>
+                    <h5>Como assim?</h5>
+                    O conhecimento para muitos é o bem mais importante que um ser humano pode adquirir. Nosso objetivo é fazer com que estes "bens" cheguem a todos.
+                    Somos uma Startup formada por três jovens acadêmicos, dois cursando engenharia da computação e uma cursando engenharia de produção. Estamos localizados
+                    na cidade de Curitiba-PR. Nossa equipe entre muitas qualidades, se destaca por ser formada por jovens que possuem vivência em vários âmbitos corporativos.
+                </p>
+                <p>
+                    Com o aumento e a complexidade dos processos administrativos, é necessário que os gestores busquem alternativas e meios para poder superar as dificuldades
+                    e desafios encontrados. Tendo em vista tomar melhores decisões em meio às inúmeras possibilidades de resultados.
+                </p>
+                <p>
+                    A evolução das tecnologias da informação vem promovendo diversas mudanças na sociedade em geral. Entre elas está a disponibilização de uma quantidade
+                    cada vez mais crescente de informações, resultado principalmente do aumento da capacidade de processamento e armazenamento.
+                </p>
+                <p>
+                    <h5>Nossa Missão</h5>
 
-                Oferecer um sistema web para armazenar e gerenciar conteúdos de cunho profissional gerados pelos próprios colaboradores da organização. Também pretendemos fazer
-                com que está ferramente ajude no engajamento dos colaboradores, e assim aumentando a motivação dos colaboradores no ambiente de trabalho.
-            </p>
-            <div class="container">
-                <div class="row">
-                    <div class="col">
-                        <h6></h6>
-                    </div>
-                    <div class="w-100"></div>
-                    <div class="col">col</div>
-                    <div class="w-100"></div>
-                    <div class="col">col</div>
-                    <div class="w-100"></div>
-                    <div class="col">col</div>
+                    Oferecer um sistema web para armazenar e gerenciar conteúdos de cunho profissional gerados pelos próprios colaboradores da organização. Também pretendemos fazer
+                    com que está ferramenta ajude no engajamento dos colaboradores, e assim aumentando a motivação dos colaboradores no ambiente de trabalho.
+                </p>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row text-center border">
+                <div class="w-100 border alert-success">
+                    <h6><span>Funcionalidades</span></h6>
+                </div>
+                <div class="col text-center border">
+                    <h6>Compartilhamento de conhecimento</h6>
+                </div>
+                <div class="col border">
+                    <img src="../img/aprovado.png" alt="Sim" />
+                </div>
+                <div class="w-100"></div>
+                <div class="col text-center border">
+                    <h6>Compartilhamento em nuvem</h6>
+                </div>
+                <div class="col border">
+                    <img src="../img/aprovado.png" alt="Sim" />
+                </div>
+                <div class="w-100"></div>
+                <div class="col text-center border">
+                    <h6>Engajamento da equipe</h6>
+                </div>
+                <div class="col border">
+                    <img src="../img/aprovado.png" alt="Sim" />
+                </div>
+                <div class="w-100"></div>
+                <div class="col text-center border">
+                    <h6>Cadastro do Colaborador via LinkedIn</h6>
+                </div>
+                <div class="col border">
+                    <img src="../img/aprovado.png" alt="Sim" />
                 </div>
             </div>
         </div>
-    </div>
-</body>
+    </body>
