--- a/Views/Colaborador/Edit.cshtml
+++ b/Views/Colaborador/Edit.cshtml
@@ -40,7 +40,7 @@
             </div>            
             <div class="form-group">
                 <label asp-for="DepartamentoId" class="control-label"></label>
-                <select asp-for="DepartamentoId" class="form-control" asp-items="@(new SelectList(ViewBag.ListaDepartamentos, "Id", "Nome"))"></select>
+                <select asp-for="DepartamentoId" class="form-control" asp-items="@ViewBag.ListaDepartamentos"></select>
                 <span asp-validation-for="DepartamentoId" class="text-danger"></span>
             </div>
             <div class="form-group">
