Implementado páginação; alterado banco de dados tabela colaborador, inserido logo

--- a/Views/_ViewImports.cshtml
+++ b/Views/_ViewImports.cshtml
@@ -1,3 +1,7 @@
 ﻿@using Padronizei
 @using Padronizei.Models
+
+@using ReflectionIT.Mvc.Paging
+@addTagHelper *, ReflectionIT.Mvc.Paging
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
