--- a/Views/Colaborador/Delete.cshtml
+++ b/Views/Colaborador/Delete.cshtml
@@ -42,10 +42,10 @@
             @Html.DisplayFor(model => model.DataCriacao)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DepartamentoId)
+            @Html.DisplayNameFor(model => model.DepartamentoRelacionado)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DepartamentoId)
+            @Html.DisplayFor(model => model.DepartamentoRelacionado)
         </dd>
     </dl>
     
