--- a/Views/Departamento/Index.cshtml
+++ b/Views/Departamento/Index.cshtml
@@ -28,7 +28,7 @@
                 @Html.DisplayFor(modelItem => item.Nome)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.OrganizacaoId)
+                @Html.DisplayFor(modelItem => item.Organizacao.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
