--- a/Views/Colaborador/Index.cshtml
+++ b/Views/Colaborador/Index.cshtml
@@ -51,6 +51,6 @@
 }
     </tbody>
 </table>
-<nav aria-label="Page navigation example">
+<nav aria-label="pagination">
     <vc:pager paging-list="@Model"/>
 </nav>
