--- a/Views/Colaborador/Create.cshtml
+++ b/Views/Colaborador/Create.cshtml
@@ -33,9 +33,9 @@
                 <span asp-validation-for="Email" class="text-danger"></span>
             </div>            
             <div class="form-group">
-                <label asp-for="DepartamentoRelacionado" class="control-label"></label>
-                <select asp-for="DepartamentoRelacionado" class="form-control" asp-items="@ViewBag.ListaDepartamentos"></select>
-                <span asp-validation-for="DepartamentoRelacionado" class="text-danger"></span>
+                <label asp-for="Departamento" class="control-label"></label>
+                <select asp-for="DepartamentoId" class="form-control" asp-items="@ViewBag.ListaDepartamentos"></select>
+                <span asp-validation-for="DepartamentoId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-primary" />
