--- a/Views/Colaborador/Details.cshtml
+++ b/Views/Colaborador/Details.cshtml
@@ -41,10 +41,10 @@
             @Html.DisplayFor(model => model.DataCriacao)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DepartamentoRelacionado)
+            @Html.DisplayNameFor(model => model.Departamento)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DepartamentoRelacionado)
+            @Html.DisplayFor(model => model.Departamento.Nome)
         </dd>
     </dl>
 </div>
