--- a/Views/Colaborador/Index.cshtml
+++ b/Views/Colaborador/Index.cshtml
@@ -22,7 +22,7 @@
                 @Html.DisplayNameFor(model => model.DataCriacao)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DepartamentoRelacionado)
+                @Html.DisplayNameFor(model => model.Departamento)
             </th>
             <th></th>
         </tr>
@@ -40,7 +40,7 @@
                 @Html.DisplayFor(modelItem => item.DataCriacao)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DepartamentoRelacionado.Nome)
+                @Html.DisplayFor(modelItem => item.Departamento.Nome)
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Editar</a> |
