--- a/Views/Conteudo/Create.cshtml
+++ b/Views/Conteudo/Create.cshtml
@@ -24,14 +24,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Visibilidade" class="control-label"></label>
-                <select asp-for="Visibilidade" class="form-control"></select>
+                <select asp-for="Visibilidade" class="form-control" asp-items="@Html.GetEnumSelectList(typeof(Padronizei.Models.Visibilidade))"></select>
                 <span asp-validation-for="Visibilidade" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="DataCriacao" class="control-label"></label>
                 <input asp-for="DataCriacao" class="form-control" />
                 <span asp-validation-for="DataCriacao" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="ColaboradorId" class="control-label"></label>
                 <input asp-for="ColaboradorId" class="form-control" />
