--- a/Views/Conteudo/Create.cshtml
+++ b/Views/Conteudo/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
-<h4>Conteudo</h4>
+<h4>Conteúdo</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -24,14 +24,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Visibilidade" class="control-label"></label>
-                <select asp-for="Visibilidade" class="form-control" asp-items="@Html.GetEnumSelectList(typeof(Padronizei.Models.Visibilidade))"></select>
+                <select asp-for="Visibilidade" class="form-control"></select>
                 <span asp-validation-for="Visibilidade" class="text-danger"></span>
             </div>
-            @* <div class="form-group">
+            <div class="form-group">
                 <label asp-for="DataCriacao" class="control-label"></label>
                 <input asp-for="DataCriacao" class="form-control" />
                 <span asp-validation-for="DataCriacao" class="text-danger"></span>
-            </div> *@
+            </div>
             <div class="form-group">
                 <label asp-for="ColaboradorId" class="control-label"></label>
                 <input asp-for="ColaboradorId" class="form-control" />
@@ -43,13 +43,13 @@
                 <span asp-validation-for="DepartamentoId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar à lista</a>
 </div>
 
