--- a/Views/GrupoTrabalho/Create.cshtml
+++ b/Views/GrupoTrabalho/Create.cshtml
@@ -4,9 +4,9 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Criar</h1>
 
-<h4>GrupoTrabalho</h4>
+<h4>Grupo de Trabalho</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -38,13 +38,13 @@
                 <span asp-validation-for="ColaboradorId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Voltar à lista</a>
 </div>
 
