--- a/Views/Colaborador/Index.cshtml
+++ b/Views/Colaborador/Index.cshtml
@@ -14,7 +14,13 @@
         <form asp-action="Index" method="GET">
             <div class="form-group">
                 <label for="buscaNome" class="control-label"></label>
-                <input id="buscaNome" name="nome" type="text" placeholder="Procurar por nome" value="@Context.Request.Query["nome"].ToString()" class="form-control" />                
+                <input id="buscaNome" name="nome" type="text" placeholder="Procurar por nome" value="@Context.Request.Query["nome"].ToString()" class="form-control" />
+                <label for="buscaEmail" class="control-label"></label>
+                <input id="buscaEmail" name="email" type="text" placeholder="Procurar por email" value="@Context.Request.Query["email"].ToString()" class="form-control" />
+                <label for="buscaData" class="control-label"></label>
+                <input id="buscaData" name="dataCriacao" type="text" placeholder="Buscar por data de criação " value="@Context.Request.Query["dataCriacao"].ToString()" class="form-control" />
+                <label for="buscaDepartamento" class="control-label"></label>
+                <input id="buscaDepartamento" name="departamento" type="text" placeholder="Procurar por departamento" value="@Context.Request.Query["departamento"].ToString()" class="form-control" />
             </div>
             <div class="form-group">                
                 <input id="buscaFiltro" type="submit" value="Pesquisar" class="button" />                
