--- a/Views/Colaborador/Index.cshtml
+++ b/Views/Colaborador/Index.cshtml
@@ -17,7 +17,7 @@
                 <input id="buscaNome" name="nome" type="text" placeholder="Procurar por nome" value="@Context.Request.Query["nome"].ToString()" class="form-control" />                
             </div>
             <div class="form-group">                
-                <input id="buscaFiltro" type="submit" value="Pesquisar" class="button" />                
+                <input id="buscaFiltro" type="submit" value="Pesquisar agora" class="button" />                
             </div>
         </form>
     </div>
