--- a/Views/Conteudo/Create.cshtml
+++ b/Views/Conteudo/Create.cshtml
@@ -27,19 +27,19 @@
                 <select asp-for="Visibilidade" class="form-control"></select>
                 <span asp-validation-for="Visibilidade" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="DataCriacao" class="control-label"></label>
                 <input asp-for="DataCriacao" class="form-control" />
                 <span asp-validation-for="DataCriacao" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="ColaboradorId" class="control-label"></label>
-                <input asp-for="ColaboradorId" class="form-control" />
+                <select asp-for="ColaboradorId" class="form-control" asp-items="@ViewBag.ListaColaboradores"></select>
                 <span asp-validation-for="ColaboradorId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DepartamentoId" class="control-label"></label>
-                <input asp-for="DepartamentoId" class="form-control" />
+                <label asp-for="Departamento" class="control-label"></label>
+                <select asp-for="DepartamentoId" class="form-control" asp-items="@ViewBag.ListaDepartamentos"></select>
                 <span asp-validation-for="DepartamentoId" class="text-danger"></span>
             </div>
             <div class="form-group">
