--- a/Views/Departamento/Details.cshtml
+++ b/Views/Departamento/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.OrganizacaoId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrganizacaoId)
+            @Html.DisplayFor(model => model.Organizacao.Nome)
         </dd>
     </dl>
 </div>
