--- a/Views/Conteudo/Delete.cshtml
+++ b/Views/Conteudo/Delete.cshtml
@@ -39,13 +39,13 @@
             @Html.DisplayNameFor(model => model.ColaboradorId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ColaboradorId)
+            @Html.DisplayFor(model => model.Colaborador.Nome)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.DepartamentoId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DepartamentoId)
+            @Html.DisplayFor(model => model.Departamento.Nome)
         </dd>
     </dl>
     
