--- a/Views/Conteudo/Edit.cshtml
+++ b/Views/Conteudo/Edit.cshtml
@@ -20,12 +20,14 @@
             </div>
             <div class="form-group">
                 <label asp-for="Corpo" class="control-label"></label>
-                <input asp-for="Corpo" class="form-control" />
+                <textarea asp-for="Corpo" class="form-control" rows="8"></textarea>
                 <span asp-validation-for="Corpo" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="Visibilidade" class="control-label"></label>
-                <select asp-for="Visibilidade" class="form-control"></select>
+                <select asp-for="Visibilidade" class="form-control" asp-items="@Html.GetEnumSelectList<Padronizei.Models.Visibilidade>()">
+                    <option selected="selected" value="-1">Selecione uma opção</option>
+                </select>
                 <span asp-validation-for="Visibilidade" class="text-danger"></span>
             </div>
             <div class="form-group">
@@ -35,12 +37,12 @@
             </div>
             <div class="form-group">
                 <label asp-for="ColaboradorId" class="control-label"></label>
-                <input asp-for="ColaboradorId" class="form-control" />
+                <select asp-for="ColaboradorId" class="form-control" asp-items="@ViewBag.ListaColaboradores"></select>
                 <span asp-validation-for="ColaboradorId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DepartamentoId" class="control-label"></label>
-                <input asp-for="DepartamentoId" class="form-control" />
+                <label asp-for="Departamento" class="control-label"></label>
+                <select asp-for="DepartamentoId" class="form-control" asp-items="@ViewBag.ListaDepartamentos"></select>
                 <span asp-validation-for="DepartamentoId" class="text-danger"></span>
             </div>
             <div class="form-group">
