--- a/Views/Departamento/Edit.cshtml
+++ b/Views/Departamento/Edit.cshtml
@@ -20,7 +20,7 @@
             </div>
             <div class="form-group">
                 <label asp-for="OrganizacaoId" class="control-label"></label>
-                <input asp-for="OrganizacaoId" class="form-control" />
+                <select asp-for="OrganizacaoId" class="form-control" asp-items="@ViewBag.ListaOrganizacoes"></select>
                 <span asp-validation-for="OrganizacaoId" class="text-danger"></span>
             </div>
             <div class="form-group">
