--- a/Views/GrupoTrabalho/Create.cshtml
+++ b/Views/GrupoTrabalho/Create.cshtml
@@ -22,19 +22,19 @@
                 <input asp-for="Descricao" class="form-control" />
                 <span asp-validation-for="Descricao" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="DataCriacao" class="control-label"></label>
                 <input asp-for="DataCriacao" class="form-control" />
                 <span asp-validation-for="DataCriacao" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <label asp-for="OrganizacaoId" class="control-label"></label>
-                <input asp-for="OrganizacaoId" class="form-control" />
+                <select asp-for="OrganizacaoId" class="form-control" asp-items="@ViewBag.ListaOrganizacoes"></select>
                 <span asp-validation-for="OrganizacaoId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ColaboradorId" class="control-label"></label>
-                <input asp-for="ColaboradorId" class="form-control" />
+                <select asp-for="ColaboradorId" class="form-control" asp-items="@ViewBag.ListaColaboradores"></select>
                 <span asp-validation-for="ColaboradorId" class="text-danger"></span>
             </div>
             <div class="form-group">
