--- a/Views/GrupoTrabalho/Delete.cshtml
+++ b/Views/GrupoTrabalho/Delete.cshtml
@@ -33,14 +33,14 @@
             @Html.DisplayNameFor(model => model.OrganizacaoId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.OrganizacaoId)
-        </dd>
+            @Html.DisplayFor(model => model.Organizacao.Nome)
+        </dd>        
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.ColaboradorId)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ColaboradorId)
-        </dd>
+            @Html.DisplayFor(model => model.Colaborador.Nome)
+        </dd>        
     </dl>
     
     <form asp-action="Delete">
