--- a/Views/GrupoTrabalho/Edit.cshtml
+++ b/Views/GrupoTrabalho/Edit.cshtml
@@ -14,6 +14,11 @@
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="Id" />
             <div class="form-group">
+                <label asp-for="DataCriacao" class="control-label"></label>
+                <input asp-for="DataCriacao" disabled="true" class="form-control" />
+                <span asp-validation-for="DataCriacao" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <label asp-for="Nome" class="control-label"></label>
                 <input asp-for="Nome" class="form-control" />
                 <span asp-validation-for="Nome" class="text-danger"></span>
@@ -22,20 +27,15 @@
                 <label asp-for="Descricao" class="control-label"></label>
                 <input asp-for="Descricao" class="form-control" />
                 <span asp-validation-for="Descricao" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="DataCriacao" class="control-label"></label>
-                <input asp-for="DataCriacao" class="form-control" />
-                <span asp-validation-for="DataCriacao" class="text-danger"></span>
-            </div>
+            </div>            
             <div class="form-group">
                 <label asp-for="OrganizacaoId" class="control-label"></label>
-                <input asp-for="OrganizacaoId" class="form-control" />
+                <select asp-for="OrganizacaoId" class="form-control" asp-items="@ViewBag.ListaOrganizacoes"></select>
                 <span asp-validation-for="OrganizacaoId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <label asp-for="ColaboradorId" class="control-label"></label>
-                <input asp-for="ColaboradorId" class="form-control" />
+                <select asp-for="ColaboradorId" class="form-control" asp-items="@ViewBag.ListaColaboradores"></select>
                 <span asp-validation-for="ColaboradorId" class="text-danger"></span>
             </div>
             <div class="form-group">
