--- a/Views/Organizacao/Create.cshtml
+++ b/Views/Organizacao/Create.cshtml
@@ -22,11 +22,11 @@
                 <input asp-for="CNPJ" class="form-control" />
                 <span asp-validation-for="CNPJ" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            @* <div class="form-group">
                 <label asp-for="DataCriacao" class="control-label"></label>
                 <input asp-for="DataCriacao" class="form-control" />
                 <span asp-validation-for="DataCriacao" class="text-danger"></span>
-            </div>
+            </div> *@
             <div class="form-group">
                 <input type="submit" value="Criar" class="btn btn-primary" />
             </div>
